--- a/index.html
+++ b/index.html
@@ -163,13 +163,15 @@
         </ul>
       </div>
       <div>
-        <h3>НАМ ДОВІРЯЮТЬ</h3>
-        <div>
-          <h4>
-            Нашим спорядженням користуються ЗСУ, ССО та інші військові
-            формування
+        <h3 class="title-page">НАМ ДОВІРЯЮТЬ</h3>
+        <div class="weapon">
+          <h4 class="weapon-header">
+            Нашим спорядженням користуються
+            <span class="orange-span-color"
+              >ЗСУ, ССО та інші військові формування</span
+            >
           </h4>
-          <p>
+          <p class="weapon-paragraph">
             З нами співпрацюють лідери військової справи, адже ми забезпечуємо
             широкий вибір оригінальних товарів і гарантуємо комфорт, надійність
             та безпеку
@@ -177,7 +179,7 @@
         </div>
       </div>
       <div>
-        <ul>
+        <ul class="icons-list">
           <li>
             <a href="">
               <img src="./icons/agilite.png" alt="agilite" />
