--- a/index.html
+++ b/index.html
@@ -200,7 +200,9 @@
               <img src="./icons/scarpa.png" alt="scarpa" />
             </a>
           </li>
-          <li><p>ВСІ БРЕНДИ</p></li>
+          <li class="central-icon-list">
+            <p class="central-icon">ВСІ БРЕНДИ</p>
+          </li>
           <li>
             <a href="">
               <img src="./icons/vertx.png" alt="vertx" />
