--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div>VIDEO</div>
       <div>
         <ul class="general-list-container">
-          <div class="up-row">
+          <div class="items-row">
             <li class="fisrst-element">
               <h4 class="mission">
                 <span class="orange-span-color">Наша місія</span> - це
@@ -131,8 +131,7 @@
             <li class="third-element">
               <img src="./images/image 130.jpg" alt="soldat" width="502" />
             </li>
-          </div>
-          <div class="down-row">
+
             <li class="second-element">
               <p class="number">02</p>
               <h4 class="first-internal-element">
